# idx-daily

./: README.md  app.py  config.toml  main.py  pyproject.toml  requirements.txt
src/: browser_manager.py  browser_utils.py  constants.py  date_utils.py  downloader.py  log_setup.py  logging_setup.py  menu.py
